# seed-to-shelf

./: .env.template  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add_traceability_service.sh  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  push_to_github.sh  test-traceability.sh
.github/workflows/: ci.yml  publish-contracts.yml  publish-npm.yml  publish-pypi.yml
.openhands/: TASKS.md
apps/admin/app/: page.tsx
apps/chef/: package.json
apps/consumer/: app.json
contracts/: .gitignore  LICENSE  README.md  package-lock.json  package.json  setup.py  test_integration.py  test_integration_fixed.py  tsconfig.json
contracts/.github/workflows/: publish-packages.yml  publish.yml
contracts/events/: asyncapi.yaml
contracts/python/: __init__.py  pydantic_models.py  pyproject.toml
contracts/s2s_contracts/: __init__.py  pydantic_models.py
contracts/schemas/json/: lot.json
contracts/typescript/: index.ts
docs/: events.md  roadmap.md
infra/docker/: docker-compose.yml  seed_data.py
services/api/: Dockerfile  pyproject.toml
services/api/compliance/rules/: CA_SAN_MATEO_MEHKO.json
services/api/src/api/v1/: router.py
services/farm/: Dockerfile  requirements.txt  test_docker_setup.sh
services/farm/apps/chef/: App.js
services/farm/docs/: architecture.md  compliance.md
services/logistics/: Dockerfile  main.py  turbo.json
services/logistics/services/traceability/: alembic.ini  generate_seed_data.py  pyproject.toml
services/logistics/services/traceability/alembic/versions/: initial_migration.py
services/recommender/: .gitignore  Dockerfile  SUMMARY.md  demo_traceability.sh  package.json  requirements.txt
services/recommender/docs/: operations.md
services/traceability/: Dockerfile  README.md  models.py  requirements.txt  test_full_workflow.py  test_models.py  test_traceability.py
traceability/: main.py  models.py
traceability/alembic/: env.py
traceability/alembic/versions/: 20250825_initial_traceability_models.py
traceability/tests/: test_basic.py  test_traceability_service.py
(+14 files in other folders)
