


[tool.poetry]
name = "s2c-api"
version = "0.1.0"
description = "Seed to Chef API Service"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src", from = "services/api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.2"}
sqlalchemy = "^2.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
redis = "^5.0.8"
stripe = "^6.1.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^1.29.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
httpx = "^0.27.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
isort = "^5.14.1"
black = "^24.10.0"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


